Uploaded image for project: 'Apache Avro'
  1. Apache Avro
  2. AVRO-1004

avropipe displays NUL terminator for string values

VotersWatch issueWatchersCreate sub-taskLinkCloneUpdate Comment AuthorReplace String in CommentUpdate Comment VisibilityDelete Comments
    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 1.6.1
    • 1.6.2
    • c
    • None

    Description

      The avropipe tool displays the NUL terminator for any string values:

      $ avropipe examples/quickstop.db | head -n 7
      /	[]
      /0	{}
      /0/ID	1
      /0/First	"Dante\u0000"
      /0/Last	"Hicks\u0000"
      /0/Phone	"(0)\u0000"
      /0/Age	32
      

      Attachments

        Activity

          This comment will be Viewable by All Users Viewable by All Users
          Cancel

          People

            dcreager Douglas Creager
            dcreager Douglas Creager
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Slack

                Issue deployment