AVRO-1004. C: avropipe: Don't display NUL terminators for string values.

git-svn-id: https://svn.apache.org/repos/asf/avro/trunk@1236182 13f79535-47bb-0310-9956-ffa450edef68